Fixed spacing of card-headers

--- a/views/css/dashboard.css
+++ b/views/css/dashboard.css
@@ -40,4 +40,14 @@
 .card-text{
     height: 100%;
     width: 80%;
+    font-size: 22px;
+    font-weight: 600;
+    padding-top: 20px;
+    padding-left: 25px;
+    color: rgb(194, 194, 194);
 }
+
+.card-header-1 {
+    color: rgb(238, 77, 77);
+}
+
